# blog_project

./: pyproject.toml  requirements.txt
blog/: admin.py  forms.py  models.py  settings.py  urls.py  views.py
core/: settings.py  urls.py
templates/: base.html
templates/blog/: detail.html  home.html  list.html
