[project]
name = "blog-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "crispy-tailwind>=1.0.3",
    "django>=5.2.7",
    "django-browser-reload>=1.21.0",
    "django-tailwind>=4.2.0",
    "pillow>=12.0.0",
    "python-dotenv>=1.2.1",
    "whitenoise>=6.11.0",
]
